generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        Int      @id @default(autoincrement())
  email     String   @unique @db.VarChar(100)
  username  String   @unique @db.VarChar(100)
  password  String   @db.VarChar(100)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Appointment {
  id           Int              @id @default(autoincrement())
  patient      String           @db.VarChar(150)
  email        String           @db.VarChar(100) 
  phone        String           @db.VarChar(100)
  insurance    Insurance        @relation(fields: [insurance_id], references: [id])
  insurance_id Int
  date_time    DateTime
  state        AppointmentState
  createdAt    DateTime         @default(now())
  updatedAt    DateTime         @updatedAt
}

enum AppointmentState {
  requested
  confirmed
  cancelled
}

model Insurance {
  id           Int           @id @default(autoincrement())
  name         String        @unique @db.VarChar(100)
  description  String        @db.VarChar(255)
  appointments Appointment[]
  active       Boolean       @default(true)
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
}
